--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,6 @@
 @layer utilities {
   .hero-bg-color {
     @apply bg-gradient-to-r from-gray-300/80 to-gray-100
-    dark:from-gray-900 dark:to-gray-800
+    dark:from-gray-900 dark:to-gray-800;
   }
 }
